--- a/template.html
+++ b/template.html
@@ -139,11 +139,11 @@
     </div>
 
     {% for group_of_products in list_of_product_groups %}
-        {% for type_of_products, products in group_of_products.items() %}
+        {% for group_title, products in group_of_products.items() %}
             <div class="container">
                 <div class="row">
                     <div class="col-12 section-title text-center mb-5">
-                        <h2 class="d-block">{{ type_of_products }}</h2>
+                        <h2 class="d-block">{{ group_title }}</h2>
                     </div>
                         {% for product in products %}
                             <div class="col-lg-4 mb-5 col-md-6">
